# passgen

./: README.md  passgen.py  pyproject.toml  setup.py
passgen/: __main__.py  config.py  main.py  passgen.py  passwordgenerator.py
